--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="phone"></div>
+      <div class="phone only-desktop"></div>
       <div class="content">
         <div class="header">
           <div class="logo"></div>
@@ -18,6 +18,7 @@
 
           </button>
         </div>
+        <div class="phone only-mobile"></div>
         <div class="text"> 
           
           <h2>Capture and Share</h2><h2> the World's Moments</h2>
@@ -26,12 +27,11 @@
           &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
           <p>Oh yeah, did we mention it's free?</p>
           <div class="store-buttons">
-            <div class="appstore"></div>
-            <div class="googleplay"></div>
+            <div class="appstore buttons-mobile"></div>
+            <div class="googleplay buttons-mobile"></div>
           </div>
          </div>
       </div>
-
     </div>
     <footer>
       <ul>
